--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="d-flex justify-content-around flex-wrap logos align-items-center">
+        <div class="justify-content-around flex-wrap logos align-items-center">
             <div> <a href="https://abimed.org.br/" target="_blank"><img src="assets/logos/abimed-pb.png" alt=""></a>
             </div>
             <div><a href="https://abimo.org.br/" target="_blank"><img src="assets/logos/abimo.png" alt=""></a></div>
